local/envoy-test-minimal.yaml
# Minimal Envoy config to test WASM loading
static_resources:
  listeners:
    - name: listener_test
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: test_http
                codec_type: AUTO
                route_config:
                  name: test_route
                  virtual_hosts:
                    - name: test
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "OK"
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "test_minimal"
                        root_id: "test_minimal"
                        fail_open: false  # Fail if WASM doesn't load
                        vm_config:
                          vm_id: "test_minimal_vm"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/test-minimal.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters: []

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
